--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,7 @@
 buildscript {
     ext {
         gradleVersion = '3.1.2'
-        kotlinVersion = '1.2.40'
-        googleServicesVersion = '3.1.1'
-        fabricVersion = '1.25.2'
+        kotlinVersion = '1.2.41'
     }
     repositories {
         google()
@@ -47,7 +45,7 @@ ext {
     //PhotoView
     photoViewVersion = '2.1.3'
     //Crashlitycs
-    crashlitycsVersion = '2.9.1'
+    crashlitycsVersion = '2.9.2'
     //Rx
     rxjavaVersion = '2.1.6'
     rxkotlinVersion = '2.2.0'
@@ -63,7 +61,9 @@ ext {
     //Timber
     timberVersion = '4.6.0'
     //ThreeTenABP
-    threeTenAbpVersion = '1.0.5'
+    threeTenAbpVersion = '1.1.0'
+    //Koin DI
+    koin_version = '0.9.2'
 
     //Test dependencies
     junitVersion = '4.12'
